test/should_pass/basic_067.grg
actions basic_067 using basic_model_002;

rule r {
	pattern {
		x : BC;
	}
	replace {
		eval {
			x.ib = 42;
			x.ic = 42;
		}
	}
}

